--- a/templates/mailTemplate.html
+++ b/templates/mailTemplate.html
@@ -10,8 +10,8 @@
         box-shadow:1px 1px 5px #333; /* Standard blur at 5px. Increase for more depth */
         -webkit-box-shadow:1px 1px 5px #333;
         -moz-box-shadow:1px 1px 5px #333;">
-        <div style="background-image: url({{ img_path }}); background-size: cover; height: 0;
-    padding-top: 66.666%; background-repeat: no-repeat;">
+        <div style="background-size: cover; height: 0;
+    padding-top: 66.666%; background: url({{ img_path }}) no-repeat;">
             <div style="background-color: #fff; width: 400px; height: 400px; opacity: 0.15;"></div>
         </div>
         <div style="margin-top:10px; text-align:center">
