--- a/templates/mailTemplate.html
+++ b/templates/mailTemplate.html
@@ -12,7 +12,7 @@
         -moz-box-shadow:1px 1px 5px #333;">
         <div style="background-size: cover; height: 0;
     padding-top: 66.666%; background: url({{ img_path }}) no-repeat;">
-            <div style="background-color: #fff; width: 400px; height: 400px; opacity: 0.15;"></div>
+            <div style="background-color: #fff; width: 400px; height: auto; opacity: 0.15;"></div>
         </div>
         <div style="margin-top:10px; text-align:center">
             <span>{{ send_contents }}</span>
